# AI-Dashboard

./: AI_Dashboard_Generator_Project_Report.docx  requirement.txt
backend/: pyproject.toml
backend/app/: main.py
backend/app/prompts/: dashboard_prompt.py
backend/app/routers/: dashboard.py
backend/app/services/: chart.py  excel_service.py  kpi.py  llm.py  preprocessing.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.jsx
frontend/src/components/: ChartGrid.jsx  ChartRenderer.jsx  KPIGrid.jsx
frontend/src/components/Dashboard/: index.jsx
frontend/src/components/FileUpload/: index.jsx
frontend/src/components/KPICard/: index.jsx
frontend/src/components/Navbar/: index.jsx
frontend/src/pages/: Dashboard.jsx
frontend/src/services/: api.js
